# lambdajam-relative-monads

./: .gitignore  Notes.md  README.md
haskell/: Setup.lhs  lambdajam-workshop.cabal  setup.sh
haskell/src/: Extension.hs  FS.hs  FST.hs  Ignore.txt  MonadResult.hs  RelMonad.hs  RelReader.hs  RelResIO.hs  RelResult.hs  Result.hs  ResultT.hs
haskell/src/help/: RelMonad.hs-help
haskell/test/: doctests.hs
scala/: build.sbt
scala/src/main/scala/: Extensions.scala  FS.scala  FST.scala  MonadResult.scala  RelMonad.scala  RelResult.scala  Result.scala
scala/src/main/scala/help/: RelMonad.scala
scala/src/test/scala/: Arbitraries.scala  FSMatchers.scala  FSSpec.scala  FSTSpec.scala  RelFSSpec.scala  RelResultSpec.scala  ResultSpec.scala  Test.scala
