name:                lambdajam-workshop
version:             0.1.0.0
license:             AllRightsReserved
author:              Stephan Hoermann
maintainer:          stephan.hoermann@cba.com.au
category:            Stats
build-type:          Simple
cabal-version:       >=1.10

executable lambdajam-workshop
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
      base       >= 4.7
    , directory  >= 1.2
    , mtl        >= 2.2
  ghc-options: -O2 -Wall
  ghc-prof-options: -fprof-auto -rtsopts
