name:                lambdajam-workshop
version:             0.1.0.0
license:             AllRightsReserved
author:              Stephan Hoermann
maintainer:          stephan.hoermann@cba.com.au
category:            Stats
build-type:          Simple
cabal-version:       >=1.10


library
  default-language: Haskell2010

  hs-source-dirs: src

  exposed-modules:
                  Result
                  RelMonad
                  RelResult
                  FS
                  MonadResult
                  ResultT
                  FST
                  Extension

  default-extensions:
                     MultiParamTypeClasses
                     FlexibleContexts
                  
  build-depends:
                base       >= 4.7
              , directory  >= 1.2
              , mtl        >= 2.1
              , transformers >= 0.3
              , QuickCheck >= 2.0
              , doctest >= 0.9.7
              
  ghc-options: -O2 
               -Wall
               -fno-warn-unused-binds
               -fno-warn-unused-do-bind
               -fno-warn-unused-imports
               
  ghc-prof-options: -fprof-auto -rtsopts

test-suite            doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
