name:          lambdajam-workshop
version:       0.1.0.0
license:       AllRightsReserved
author:        Stephan Hoermann
maintainer:    stephan.hoermann@cba.com.au
category:      Stats
build-type:    Custom
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Extension
    FS
    FST
    MonadResult
    RelMonad
    RelResult
    Result
    ResultT

  default-extensions:
    MultiParamTypeClasses
    FlexibleContexts

  build-depends:
      base         >= 4.7
    , directory    >= 1.2
    , doctest      >= 0.9.7
    , mtl          >= 2.1
    , QuickCheck   >= 2.0
    , transformers >= 0.3

  ghc-options:
    -Wall
    -fno-warn-unused-binds
    -fno-warn-unused-do-bind
    -fno-warn-unused-imports

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs: test
  default-language: Haskell2010

  build-depends:
      base             >= 3 && < 5
    , directory        >= 1.1
    , doctest          >= 0.9.7
    , filepath         >= 1.3
    , QuickCheck       >= 2.0
    , template-haskell >= 2.8

  ghc-options:
    -Wall
    -threaded
